Fix navbar desktop overflow scroll

--- a/src/style/04-components/_navbar.scss
+++ b/src/style/04-components/_navbar.scss
@@ -48,7 +48,10 @@ nav {
 		flex: auto;
 		justify-content: space-between;
 		align-items: center;
-		overflow-y: scroll;
+
+		@include mq($until: lg) {
+			overflow-y: scroll;
+		}
 
 		@include mq($from: lg) {
 			& .list-inline>li {
